--- a/page-heads/index/document-head.pug
+++ b/page-heads/index/document-head.pug
@@ -1,30 +1,17 @@
 doctype html
-html(lang="en")
+html(lang="de")
     head
         meta(charset='utf-8')
         
         //- Title and Description
-        title New Website
-        meta(name='description', content='The new Website, has just been created!')
-        
-        //- Open Graph meta Tags
-        meta(property='og:image' content="https://")
-        meta(property='og:title' content="New Website")
-        meta(property='og:description' content='The new Website, has just been created!')
-        meta(property='og:type' content="website")
-        meta(property='og:url' content="https://")
-        meta(property='og:locale' content="en_US")
-
-        //- Manifest
-        link(rel='manifest' href='manifest.json')
+        title Neues Passwort für den Sentinel 
+        meta(name='description', content='Setzen sie hier Ihr neues Passwort für den Sentinel!')
 
         //- Favicon
-        link(rel="icon", type="image/png", sizes="32x32", href="/favicon-32x32.png")
-        link(rel="icon", type="image/png", sizes="16x16", href="/favicon-16x16.png")
-        link(rel="apple-touch-icon", sizes="180x180", href="/apple-touch-icon.png")
-        link(rel="mask-icon", href="/safari-pinned-tab.svg", color="#5bbad5")
-        
-        meta(name="msapplication-TileColor", content="#da532c")
+        link(rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96")
+        link(rel="icon" type="image/svg+xml" href="/favicon.svg")
+        link(rel="shortcut icon" href="/favicon.ico")
+
         meta(name="theme-color", content="#ffffff")
         
         //- Screen
