--- a/source/globalstyles/styles.styl
+++ b/source/globalstyles/styles.styl
@@ -3,9 +3,15 @@
 /*==========================================================
 Color Theme
 ==========================================================*/
-cd-foreground = white
+cd-foreground = black
 cd-flash = purple
-cd-background = black
+cd-background = white
+cd-error-red = #711
+cd-good-green = #383
+cd-info = #517891
+cd-dark-blue = #113
+// cd-light-blue = #00aec7
+cd-light-blue = #0ac
 
 /*==========================================================
 Global Variables
@@ -13,6 +19,12 @@ Global Variables
 // max-content-width = 900px
 // mobile-side-padding = 15px
 
+header-height = 110px
+mobile-header-height = 75px
+
+mobileMaxWidth = 580px
+
+desktopscreen = 'screen and (min-width: %s)' %  mobileMaxWidth
 
 /*==========================================================
 General Tag Styles
@@ -23,13 +35,21 @@ body
     font-family: Arial, Helvetica, sans-serif
     text-align: center
     font-size: 12pt
-    height 100vh
     width 100%
-    overflow hidden
-
+    line-height 125%
 h1
-    font-size: 17pt
+    font-size: 21pt
 h2
     font-size: 15pt
+h3
+    font-size: 14pt
 p
     font-size: 12pt
+
+svg
+    width inherit
+    height inherit
+
+
+.hidden-templates
+    display none
